[gd_scene load_steps=2 format=2]

[ext_resource path="res://MapContainer/RightPanel.gd" type="Script" id=1]

[node name="RightPanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 14.0
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0

[node name="SpeedLabel" type="Label" parent="."]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 50.0

[node name="AttackLabel" type="Label" parent="."]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 68.0
